Added a local database

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -27,6 +27,9 @@
         <ion-item menu-close href="#/app/participants">
           Participants
         </ion-item>
+		<ion-item menu-close href="#/app/test">
+          Test
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
