--- a/www/templates/playlist.html
+++ b/www/templates/playlist.html
@@ -1,5 +1,12 @@
 <ion-view view-title="Playlist">
   <ion-content>
     <h1>Playlist</h1>
+		<button ng-click="insert('atest', 'last name')" class="button button-stable">
+		insert
+	</button>
+	<button ng-click="select('atest')" class="button button-stable">
+		select
+	</button>
+	{{name}}
   </ion-content>
 </ion-view>
