--- a/www/templates/playlist.html
+++ b/www/templates/playlist.html
@@ -4,7 +4,7 @@
 		<button ng-click="insert('atest', 'last name')" class="button button-stable">
 		insert
 	</button>
-	<button ng-click="select('atest')" class="button button-stable">
+	<button ng-click="select('last name')" class="button button-stable">
 		select
 	</button>
 	{{name}}
