--- a/www/templates/location.html
+++ b/www/templates/location.html
@@ -1,7 +1,7 @@
 <ion-pane>
-      <ion-header-bar class="bar-dark">
-		<img src="img/logoShadow.png" class="logo-header-bar" >
-		<img src="img/name3.png" class="logo-name-header-bar" >
+      <ion-header-bar class="bar-dark-custom">
+		<img src="img/oldlogosmallwhite.png" class="logo-header-bar" >
+		<img src="img/name5.png" class="logo-name-header-bar" >
       </ion-header-bar>
 	  <ion-content class="background">
 	  <div class="list">
