--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,25 +1,43 @@
 /* Empty. Add your own CSS if you like */
+.center{
+	text-align:center;
+}
 .logo{
-	width:125px;
+	width:16%;
+	height: auto;
+	margin: auto;
+	display: block;
+	padding-bottom:20px
+}
+.logo-name{
+	width:70%;
+	/*background-color:white;*/
 	height: auto;
 	margin: auto;
 	display: block;
 }
 .background{
-	background-color: #FFFBE6;
+	background-color: #FFF;
 }
 .logo-header-bar{
-	width:37px;
+	width:36px;
 }
 .logo-name-header-bar{
-	max-width:269px;
+	max-width:381px;
 }
 .logo-header{
-	padding-top: 30vh;
+	padding-top: 10vh;
 
 }
+.bar.bar-dark-custom {
+    border-color: #6D6D6D;
+    background-color: #9B9B9B;
+    background-image: linear-gradient(0deg, #111, #111 50%, transparent 50%);
+    color: #fff;
+}
 .logo-comp-names{
-	max-width:500px;
+	width:50%;
+	padding:10px;
 	height: auto;
 	margin: auto;
 	display: block;
@@ -31,9 +49,10 @@
 	height:100vh;
 }
 .login{
-	background: url('../img/header3.jpg') center;
+	background: url('../img/bgrepeat3.jpg') center;
+	
 	background-size: auto 100%;
-	background-color: #88ABB4;
+	background-color: #9B9B9B;
 }
 .footer-container{
 	position:absolute;
@@ -120,12 +139,35 @@ input[type="text"].login-button{
 	padding-right: 10px;
 	color: #444;
 }
-.button.button-positive{
-	background-color:#7FA3E0;
-	border-color: #2F4A77;
+/*.button.button-positive{
+	background-color:#ea2025;
+	border-color: #ea2025;
 }
  .button.button-positive.activated {
-      border-color: #2F4A77;
-      background-color: #2F4A77;
+      border-color: #b80000;
+      background-color: #b80000;
       box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.1); 
 }
+*/
+/*added*/
+.fancy-select-text{
+	float:right;
+}
+
+fancy-select .list {
+  margin: -1px 0; }
+
+/* Items */
+/* line 13, ../scss/modules/_fancy-select.scss */
+.fancy-select-items {
+  position: fixed;
+  left: 0;
+  width: 100%;
+  height: 100%; }
+  /* line 19, ../scss/modules/_fancy-select.scss */
+  .fancy-select-items .item {
+    overflow: hidden;
+    /* Clearfix */ }
+
+
+
