--- a/www/templates/all.html
+++ b/www/templates/all.html
@@ -1,12 +1,14 @@
 <ion-pane>
-<ion-header-bar class="bar-dark">
-		<img src="img/logoShadow.png" class="logo-header-bar" >
-		<img src="img/name3.png" class="logo-name-header-bar" >
+<ion-header-bar class="bar-stable">
+		
+		<h1 class="title">All Sales</h1>
       </ion-header-bar>
 	  <ion-content class="background">
     <ion-list>
-      <ion-item ng-repeat="participant in participants" href="#/part/{{participant.id}}">
+      <ion-item ng-repeat="participant in participants" href="#/part/{{participant.id}}" class="item item-icon-right" >
         {{participant.name}}
+		<i ng-if="participant.isUploaded == 1" class="icon balanced ion-checkmark-circled"></i>
+		<a ng-if="participant.isUploaded == 0" href="#/upload" ><i  class="icon ion-android-upload energized"></i></a>
       </ion-item>
     </ion-list>
   </ion-content>
@@ -19,6 +21,9 @@
   </a>
   <a class="tab-item" href="#/login">
     <i class="icon ion-home" ></i>
+  </a>
+  <a class="tab-item" href="#/upload">
+	<i class="icon ion-android-upload" ></i>
   </a>
 </div>
 </ion-pane>
